syntax = "proto3";

package user;

option go_package="userKit/pb/user";

// 登录或者注册
service User {
  // 注册
  rpc SignUp (SignUpRequest) returns (SignUpResponse) {}

  // 登录
  rpc SignIn (SignInRequest) returns (SignInResponse) {}

  // 获取单个用户的模块信息
  rpc GetUserInfoByUserId (GetUserInfoByUserIdRequest) returns (GetUserInfoByUserIdResponse){}

}

message  SignUpRequest {
  string name = 1;
  string password = 2;
  int64 pid = 3;
}

message  SignUpResponse {
  int64 id = 1;
  string message = 2;
}

message  SignInRequest {
  string name = 1;
  string password = 2;
}


message  SignInResponse {
  int64 id = 1;
  string token = 2;
  string message = 3;
}

message GetUserInfoByUserIdRequest {
  int64 id = 1;
}

message GetUserInfoByUserIdResponse {
  string modulesInfo = 1;
}